# ci_sandbox

./: .travis.yml  CMakeLists.txt  README.md
include/: arithmetic.h
script/subtraction/: subtraction.py
script/test/: subtraction_test.py
src/: addition.cpp  arithmetic.cpp
src/tests/: arithmetic_test.cpp
